# script-dump

./: LICENSE  README.md
dedup/: Cargo.toml
dedup/src/: cli.rs  data.rs  filesystem.rs  find.rs  keep.rs  main.rs
deduplicate/: README.md  cli.py  duplicates.py  files.py  main.py  requirements.txt  setup.py
deduplicate-rewrite/: Cargo.toml
deduplicate-rewrite/src/: delete.rs  fileinfo.rs  find.rs  main.rs
deduplicate/deduplicate/: __init__.py  __main__.py  cli.py  command_line.py  delete.py  duplicate.py  duplicates.py  fileinfo.py  files.py  find.py  keep.py
deduplicate/deduplicate/command_line/: __init__.py  automatic.py  interactive.py  parser.py  show.py
deduplicate/deduplicate/tests/: test_delete.py  test_delete_duplicates.py  test_fileinfo.py  test_find.py  test_find_duplicates.py  test_keep.py  util.py
deduplicate/tests/: context.py  test_duplicates.py  test_files.py  utils.py
dsub/: Cargo.toml
dsubset/: Cargo.toml
dsubset/src/: cli.rs  filesystem.rs  hash.rs  main.rs
fs-dither/: batched_dither.py  better_dither.py  dither.py  dither_image.py  fs_dither.py  image_io.py  resize.py
fs_dither/: README.md  dither_image.py  fs_dither.py  image_io.py
ftag/: setup.py
ftag/ftag/: __init__.py  __main__.py  logic.py  storage.py
ftag/ftag/tests/: test_logic.py  test_storage.py
imgproc/: .gitignore  dither_not_mine.py  grayscale.py  main.py
