[package]
name = "dedup"
version = "0.1.0"
authors = ["jaan-c <jaan-c@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
hex = "0.4.2"
clap = "3.0.0-beta.2"

[dev-dependencies]
rand = "0.8.3"
tempfile = "3.2.0"