[package]
name = "deduplicate-rewrite"
version = "0.1.0"
authors = ["jaan-c <jaan-c@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.9.1"
crypto-hash = "0.3.4"
hex = "0.4.2"

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.7.3"
filetime = "0.2.12"

[profile.release]
lto = "fat"
codegen-units = 1