[package]
name = "dsub"
version = "0.1.0"
authors = ["jaan-c <jaan-c@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
hashbrown = "0.9.1"
crypto-hash = "0.3.4"
hex = "0.4.2"
